@@ -4,20 +4,46 @@ plugins {
 }
 
 group 'de.dasbabypixel.api'
-version '1.0.5'
+version '1.0.7'
 
-java {
-    toolchain.languageVersion.set(JavaLanguageVersion.of(8))
-    withSourcesJar()
-    withJavadocJar()
+sourceCompatibility = 8
+targetCompatibility = 8
+
+ext.moduleName = 'de.dasbabypixel.property'
+
+sourceSets {
+    moduleInfo {
+        java {
+            srcDir 'src/module-info/java'
+        }
+    }
+}
+
+compileModuleInfoJava {
+    sourceCompatibility = 9
+    targetCompatibility = 9
+
+    inputs.property("moduleName", moduleName)
+
+    doFirst {
+        classpath += sourceSets.main.compileClasspath
+
+        options.compilerArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'ALL-SYSTEM',
+                '-d', sourceSets.main.output.classesDirs.asPath
+        ]
+    }
+}
+
+jar {
+    from sourceSets.main.output
+    from sourceSets.moduleInfo.output
 }
 
 publishing {
     publications {
-        maven(MavenPublication) {
-            artifactId project.name
-            groupId = project.group
-            version = project.version
+        java(MavenPublication) {
             from components.java
         }
     }
@@ -25,7 +51,7 @@ publishing {
         maven {
             name = 'DarkCube'
             credentials PasswordCredentials
-            url = 'https://nexus.darkcube.eu/repository/dasbabypixel/'
+            url = 'https://nexus.darkcube.eu/repository/darkcube/'
         }
     }
 }
